--- a/Series/Series - Import From CSV.ipynb
+++ b/Series/Series - Import From CSV.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,9 +77,259 @@
        "      <td>Fire</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Charizard</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>Water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>Water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Blastoise</td>\n",
+       "      <td>Water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Butterfree</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Weedle</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Kakuna</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Beedrill</td>\n",
+       "      <td>Bug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Pidgey</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Pidgeotto</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Pidgeot</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Rattata</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Raticate</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Spearow</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Fearow</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Ekans</td>\n",
+       "      <td>Poison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Arbok</td>\n",
+       "      <td>Poison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Pikachu</td>\n",
+       "      <td>Electric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Raichu</td>\n",
+       "      <td>Electric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Sandshrew</td>\n",
+       "      <td>Ground</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Sandslash</td>\n",
+       "      <td>Ground</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Nidoran</td>\n",
+       "      <td>Poison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Nidorina</td>\n",
+       "      <td>Poison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>Clauncher</td>\n",
+       "      <td>Water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692</th>\n",
+       "      <td>Clawitzer</td>\n",
+       "      <td>Water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>Helioptile</td>\n",
+       "      <td>Electric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>694</th>\n",
+       "      <td>Heliolisk</td>\n",
+       "      <td>Electric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>Tyrunt</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>696</th>\n",
+       "      <td>Tyrantrum</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>697</th>\n",
+       "      <td>Amaura</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>Aurorus</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>699</th>\n",
+       "      <td>Sylveon</td>\n",
+       "      <td>Fairy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>Hawlucha</td>\n",
+       "      <td>Fighting</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>701</th>\n",
+       "      <td>Dedenne</td>\n",
+       "      <td>Electric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>702</th>\n",
+       "      <td>Carbink</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>703</th>\n",
+       "      <td>Goomy</td>\n",
+       "      <td>Dragon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>704</th>\n",
+       "      <td>Sliggoo</td>\n",
+       "      <td>Dragon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>Goodra</td>\n",
+       "      <td>Dragon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706</th>\n",
+       "      <td>Klefki</td>\n",
+       "      <td>Steel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>707</th>\n",
+       "      <td>Phantump</td>\n",
+       "      <td>Ghost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>708</th>\n",
+       "      <td>Trevenant</td>\n",
+       "      <td>Ghost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>709</th>\n",
+       "      <td>Pumpkaboo</td>\n",
+       "      <td>Ghost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>710</th>\n",
+       "      <td>Gourgeist</td>\n",
+       "      <td>Ghost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>711</th>\n",
+       "      <td>Bergmite</td>\n",
+       "      <td>Ice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>712</th>\n",
+       "      <td>Avalugg</td>\n",
+       "      <td>Ice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>713</th>\n",
+       "      <td>Noibat</td>\n",
+       "      <td>Flying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>714</th>\n",
+       "      <td>Noivern</td>\n",
+       "      <td>Flying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>Xerneas</td>\n",
+       "      <td>Fairy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>716</th>\n",
@@ -112,23 +362,73 @@
        "</div>"
       ],
       "text/plain": [
-       "        Pokemon     Type\n",
-       "0     Bulbasaur    Grass\n",
-       "1       Ivysaur    Grass\n",
-       "2      Venusaur    Grass\n",
-       "3    Charmander     Fire\n",
-       "4    Charmeleon     Fire\n",
-       "..          ...      ...\n",
-       "716     Yveltal     Dark\n",
-       "717     Zygarde   Dragon\n",
-       "718     Diancie     Rock\n",
-       "719       Hoopa  Psychic\n",
-       "720   Volcanion     Fire\n",
+       "        Pokemon      Type\n",
+       "0     Bulbasaur     Grass\n",
+       "1       Ivysaur     Grass\n",
+       "2      Venusaur     Grass\n",
+       "3    Charmander      Fire\n",
+       "4    Charmeleon      Fire\n",
+       "5     Charizard      Fire\n",
+       "6      Squirtle     Water\n",
+       "7     Wartortle     Water\n",
+       "8     Blastoise     Water\n",
+       "9      Caterpie       Bug\n",
+       "10      Metapod       Bug\n",
+       "11   Butterfree       Bug\n",
+       "12       Weedle       Bug\n",
+       "13       Kakuna       Bug\n",
+       "14     Beedrill       Bug\n",
+       "15       Pidgey    Normal\n",
+       "16    Pidgeotto    Normal\n",
+       "17      Pidgeot    Normal\n",
+       "18      Rattata    Normal\n",
+       "19     Raticate    Normal\n",
+       "20      Spearow    Normal\n",
+       "21       Fearow    Normal\n",
+       "22        Ekans    Poison\n",
+       "23        Arbok    Poison\n",
+       "24      Pikachu  Electric\n",
+       "25       Raichu  Electric\n",
+       "26    Sandshrew    Ground\n",
+       "27    Sandslash    Ground\n",
+       "28      Nidoran    Poison\n",
+       "29     Nidorina    Poison\n",
+       "..          ...       ...\n",
+       "691   Clauncher     Water\n",
+       "692   Clawitzer     Water\n",
+       "693  Helioptile  Electric\n",
+       "694   Heliolisk  Electric\n",
+       "695      Tyrunt      Rock\n",
+       "696   Tyrantrum      Rock\n",
+       "697      Amaura      Rock\n",
+       "698     Aurorus      Rock\n",
+       "699     Sylveon     Fairy\n",
+       "700    Hawlucha  Fighting\n",
+       "701     Dedenne  Electric\n",
+       "702     Carbink      Rock\n",
+       "703       Goomy    Dragon\n",
+       "704     Sliggoo    Dragon\n",
+       "705      Goodra    Dragon\n",
+       "706      Klefki     Steel\n",
+       "707    Phantump     Ghost\n",
+       "708   Trevenant     Ghost\n",
+       "709   Pumpkaboo     Ghost\n",
+       "710   Gourgeist     Ghost\n",
+       "711    Bergmite       Ice\n",
+       "712     Avalugg       Ice\n",
+       "713      Noibat    Flying\n",
+       "714     Noivern    Flying\n",
+       "715     Xerneas     Fairy\n",
+       "716     Yveltal      Dark\n",
+       "717     Zygarde    Dragon\n",
+       "718     Diancie      Rock\n",
+       "719       Hoopa   Psychic\n",
+       "720   Volcanion      Fire\n",
        "\n",
        "[721 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,21 +837,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
