--- a/DataFrame/DataFrame II - .iloc[] Extract one or more rows using index position.ipynb
+++ b/DataFrame/DataFrame II - .iloc[] Extract one or more rows using index position.ipynb
@@ -354,6 +354,34 @@
     "# Note: will extract upto index 3 only\n",
     "df.iloc[:4]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# second argument, is value in the index \"3\"rd row\n",
+    "df.iloc[4, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
