--- a/DataFrame/DataFrame II - .loc[]  Extract Rows by Index Label.ipynb
+++ b/DataFrame/DataFrame II - .loc[]  Extract Rows by Index Label.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "Casino Royale                   NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "Name: Goldfinger, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Name: GoldenEye, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "Casino Royale                NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "Dr. No                              0.6  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "From Russia with Love                1.6  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "Dr. No                              0.6  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "Casino Royale                   NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "From Russia with Love                1.6  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,6 +763,219 @@
    "source": [
     "# filter multiple index\n",
     "df.loc[[\"Diamonds Are Forever\", \"From Russia with Love\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year                          1979\n",
+       "Actor                  Roger Moore\n",
+       "Director             Lewis Gilbert\n",
+       "Box Office                     535\n",
+       "Budget                        91.5\n",
+       "Bond Actor Salary              NaN\n",
+       "Name: Moonraker, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract particular columns value\n",
+    "df.loc[\"Moonraker\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roger Moore'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# actor of movie Moonraker\n",
+    "df.loc[\"Moonraker\", \"Actor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lewis Gilbert'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[\"Moonraker\", \"Director\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Director      Lewis Gilbert\n",
+       "Box Office              535\n",
+       "Name: Moonraker, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract multiple columns\n",
+    "df.loc[\"Moonraker\", [\"Director\", \"Box Office\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Director      Lewis Gilbert\n",
+       "Box Office              535\n",
+       "Budget                 91.5\n",
+       "Name: Moonraker, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract more than one columns using slicing\n",
+    "df.loc[\"Moonraker\", \"Director\":\"Budget\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Box Office</th>\n",
+       "      <th>Budget</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Film</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Moonraker</th>\n",
+       "      <td>Lewis Gilbert</td>\n",
+       "      <td>535.0</td>\n",
+       "      <td>91.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Never Say Never Again</th>\n",
+       "      <td>Irvin Kershner</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Octopussy</th>\n",
+       "      <td>John Glen</td>\n",
+       "      <td>373.8</td>\n",
+       "      <td>53.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>On Her Majesty's Secret Service</th>\n",
+       "      <td>Peter R. Hunt</td>\n",
+       "      <td>291.5</td>\n",
+       "      <td>37.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quantum of Solace</th>\n",
+       "      <td>Marc Forster</td>\n",
+       "      <td>514.2</td>\n",
+       "      <td>181.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Skyfall</th>\n",
+       "      <td>Sam Mendes</td>\n",
+       "      <td>943.5</td>\n",
+       "      <td>170.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Director  Box Office  Budget\n",
+       "Film                                                               \n",
+       "Moonraker                         Lewis Gilbert       535.0    91.5\n",
+       "Never Say Never Again            Irvin Kershner       380.0    86.0\n",
+       "Octopussy                             John Glen       373.8    53.9\n",
+       "On Her Majesty's Secret Service   Peter R. Hunt       291.5    37.3\n",
+       "Quantum of Solace                  Marc Forster       514.2   181.4\n",
+       "Skyfall                              Sam Mendes       943.5   170.2"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[\"Moonraker\":\"Skyfall\", \"Director\": \"Budget\"]"
    ]
   },
   {
